rev remark: add i1/i2 for TieLine json test data