@@ -39,7 +39,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.BDDMockito.given;
@@ -558,7 +557,7 @@ class NetworkMapControllerTest {
                 .withRedundantV(true)
                 .add();
 
-        vlgen3.newDanglingLine()
+        DanglingLine dl2 = vlgen3.newDanglingLine()
                 .setId("DL2")
                 .setName("DL2")
                 .setR(1)
@@ -571,6 +570,8 @@ class NetworkMapControllerTest {
                 .setConnectableBus("NGEN3")
                 .setBus("NGEN3")
                 .add();
+        dl2.getTerminal().setP(45);
+        dl2.getTerminal().setQ(75);
         network.newTieLine()
                 .setId("TL1")
                 .setName("TL1")
@@ -1304,7 +1305,7 @@ class NetworkMapControllerTest {
         if (nominalVoltages != null && !nominalVoltages.isEmpty()) {
             List<String> nominalVoltageStrings = nominalVoltages.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
             queryParams.addAll(QUERY_PARAM_NOMINAL_VOLTAGES, nominalVoltageStrings);
         }
         MvcResult mvcResult = mvc.perform(post("/v1/networks/{networkUuid}/elements", networkUuid)
@@ -1331,7 +1332,7 @@ class NetworkMapControllerTest {
         if (nominalVoltages != null && !nominalVoltages.isEmpty()) {
             List<String> nominalVoltageStrings = nominalVoltages.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
             queryParams.addAll(QUERY_PARAM_NOMINAL_VOLTAGES, nominalVoltageStrings);
         }
 
@@ -1350,7 +1351,7 @@ class NetworkMapControllerTest {
         if (nominalVoltages != null && !nominalVoltages.isEmpty()) {
             List<String> nominalVoltageStrings = nominalVoltages.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
             queryParams.addAll(QUERY_PARAM_NOMINAL_VOLTAGES, nominalVoltageStrings);
         }
         MvcResult mvcResult = mvc.perform(post("/v1/networks/{networkUuid}/elements-ids", networkUuid)
@@ -1369,7 +1370,7 @@ class NetworkMapControllerTest {
         if (nominalVoltages != null && !nominalVoltages.isEmpty()) {
             List<String> nominalVoltageStrings = nominalVoltages.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
             queryParams.addAll(QUERY_PARAM_NOMINAL_VOLTAGES, nominalVoltageStrings);
         }
         mvc.perform(post("/v1/networks/{networkUuid}/elements-ids", networkUuid)
@@ -2367,5 +2368,6 @@ class NetworkMapControllerTest {
     void shouldReturnTieLinesTabData() throws Exception {
         succeedingTestForElementsInfos(NETWORK_UUID, null, ElementType.TIE_LINE, InfoType.TAB, null, resourceToString("/tie-lines-tab-data.json"));
         succeedingTestForElementsInfos(NETWORK_UUID, VARIANT_ID, ElementType.TIE_LINE, InfoType.TAB, null, resourceToString("/tie-lines-tab-data.json"));
+        succeedingTestForElementInfosInDc(NETWORK_UUID, VARIANT_ID, ElementType.TIE_LINE, InfoType.TAB, "TL1", 0.80, resourceToString("/tie-line-tab-data-dc.json"));
     }
 }
